--- a/views/index.pug
+++ b/views/index.pug
@@ -3,14 +3,15 @@ extends /layout.pug
 block content
     div.results
         textarea(readonly)#result Миндаль - хайповый шифр для крутых пацанов на основе таблицы Менделеева.
+        button#copyResult Скопировать
     form.cipher-form
         div#encodeForm.input-container 
             label(for="message") 
-            input(type="text", name="message", placeholder="Текст")#encodeMessage
+            input(type="text", name="message", placeholder="Текст", autocomplete="off")#encodeMessage
             button#encodeBtn Зашифровать
         dev#decodeForm.input-container.hidden
             label(for="code")
-            input(type="text", name="code", placeholder="Шифр")#decodeMessage
+            input(type="text", name="code", placeholder="Шифр", autocomplete="off")#decodeMessage
             button#decodeBtn Расшифровать
     button#switchModesBtn Сменить режим
     script(defer src="/public/js/main.js") 
