--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,12 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
+        meta(name="description" content="Миндаль - хайповый шифр для крутых пацанов на основе таблицы Мендлеева.")
+        meta(name="keywords" content="миндаль, мендеелев, Менделеев, шифр, cipher, periodic table, периодическая таблица")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
+        meta(name="og:image" content="https://mindall.herokuapp.com/public/lock.png")
+        meta(name="og:image" content="Миндаль")
+        meta(name="og:description" content="Миндаль - хайповый шифр для крутых пацанов на основе таблицы Мендлеева.")
         title Mindall
 
         link(rel="stylesheet", href="/public/css/main.css")
