--- a/views/index.pug
+++ b/views/index.pug
@@ -12,5 +12,5 @@ block content
         dev#decodeForm.input-container.hidden
             label(for="code")
             input(type="text", name="code", placeholder="Шифр", autocomplete="off")#decodeMessage
-    button#switchModesBtn Режим дешифрования
+    button#switchModesBtn Сменить режим
     script(defer src="/public/js/main.js") 
