Typing state for chat

--- a/views/chat.pug
+++ b/views/chat.pug
@@ -15,6 +15,7 @@ block content
             div.chat
                 div.messages
                     .wrapper#messages
+                        .typing.hidden#typingState хуй
                 form.message-box
                     input(placeholder="Ваше сообщение" autocomplete="off").message-input#messageText
                     button.send-message#sendBtn(disabled) Отправить
