--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -17,6 +17,7 @@
 }
 
 .chat-container {
+    overflow-y: hidden;
     width: 100%;
     height: 100%;
     display: flex;
@@ -49,43 +50,29 @@
 .chat {
     overflow: hidden;
     display: flex;
-    flex-direction: column;
     width: 80%;
-    height: 100%;
+    flex-direction: column;
     background-color: var(--background-alt);
     border-top-left-radius: 15px;
 }
 
-.message-box {
-    border-top-left-radius: 20px;
-    margin: auto;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* width: 100%; */
-    margin: 10px;
-}
-
-.message-input {
-    width: 100%;
-}
-
-.send-message {
-    margin-left: 10px;
-    padding: 12px 25px
-}
-
 .messages {
+    position: relative;
     margin: 10px;
     border-radius: 20px;
     height: 100%;
-    max-height: 69vh;
     background: var(--background);
-    padding: 20px 0px;
+    padding: 10px 0px;
     display: flex;
     -ms-overflow-style: none;
     scrollbar-width: none; 
+}
+
+.typing {
+    color: rgb(88, 88, 88);
+    position: absolute;
+    bottom: 0;
+    padding: 10px;
 }
 
 
@@ -98,11 +85,30 @@
     background: var(--background);
     justify-content: end;
     max-height: 70vh;
-
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+.message-box {
+    border-top-left-radius: 20px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px;
+    height: 10%;
+}
+
+.message-input {
+    width: 100%;
+}
+
+.send-message {
+    margin-left: 10px;
+    padding: 12px 25px
+}
+
 
 .messages::-webkit-scrollbar {
     display: none;
@@ -158,6 +164,10 @@
     }
     .chat {
         width: 100%;
+    }
+
+    .messages {
+        margin-bottom: 5px;
     }
 
     .message-box {
