--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,6 +8,7 @@
 }
 
 body {
+  padding: 0;
   margin: 0;
   color: var(--text);
   background-color: var(--background);
@@ -20,8 +21,8 @@ body {
 
 
 .container {
+  position: fixed;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
+  height: 100%;
 }
