--- a/client/src/components/header/Header.module.css
+++ b/client/src/components/header/Header.module.css
@@ -3,8 +3,9 @@ header {
     justify-content: space-between;
     align-items: center;
     width: 95%;
+    height: 8%;
     margin: auto;
-    margin-top: 10px;
+    padding-top: 10px;
     vertical-align: middle;
 }
 
