--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@
 
 }
 
+
 body {
   padding: 0;
   margin: 0;
@@ -19,10 +20,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
 
-.container {
-  position: fixed;
-  display: flex;
+
+.wrapper {
+  clear: both;
+  min-height: 600px;
+  height: 100vh;
   width: 100%;
-  height: 100%;
 }
