Fully working history on desktop (Except opening and closing animations)

--- a/client/src/components/TranslateHistory/styles.module.css
+++ b/client/src/components/TranslateHistory/styles.module.css
@@ -34,10 +34,17 @@
 
 .original {
     color: var(--text);
-    font-size: 35px;
+    font-size: 30px;
 }
 
 .translated {
+    text-overflow: ellipsis;
     font-size: 20px;
     color: var(--placeholder)
+}
+
+.empty {
+    font-size: 30px;
+    color: var(--placeholder);
+
 }
