--- a/client/src/components/TranslateHistory/styles.module.css
+++ b/client/src/components/TranslateHistory/styles.module.css
@@ -1,7 +1,7 @@
 .list {
     margin: auto;
     margin-right: 0;
-    height: calc(100% - 75px);
+    height: 70%;
     padding: 0;
     width: 100%;
     padding: 10px 25px;
