--- a/client/src/components/Translate/styles.module.css
+++ b/client/src/components/Translate/styles.module.css
@@ -1,11 +1,22 @@
 .container {
     display: flex;
-    margin-top: 75px;
     height: calc(92% - 75px);
+    margin-top: 75px;
     width: 100%;
 }
 
+.translate-wrapper {
+    margin: 0 auto;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+
+
 .history-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     user-select: none;
     border-top-left-radius: 20px;
     transform: scaleX(0);
@@ -22,36 +33,6 @@
     transform: scaleX(100%);
     width: 30%;
     opacity: 1;
-}
-
-.history-header {
-    height: 15%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-}
-
-.history-header span {
-    padding-right: 25px;
-    padding-bottom: 10px;
-    font-size: 40px;
-}
-
-.history-header img {
-    cursor: pointer;
-    margin-left: 25px;
-    width: 40px;
-}
-.history-header img:hover {
-    opacity: 0.8;
-}
-
-.translate-wrapper {
-    margin: 0 auto;
-    width: 70%;
-    display: flex;
-    flex-direction: column;
 }
 
 .history-btn {
@@ -76,37 +57,26 @@
     background-color: var(--bright-bg);
 }
 
-.history-menu {
-    padding: 5px 10px;
-    height: 15%;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.menu-btn {
-    margin: 5px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.menu-btn:hover {
-    opacity: 0.6;
-    /* background-color: var(--background); */
-}
-
-.menu-btn img {
-    width: 37px;
-}
 
 @media only screen and (max-width: 900px) {
-    .history {
+    .container {
+        margin-top: 20px;
+    }
+    .translate-wrapper {
+        width: 100%;
+    }
+
+    .history-container, .history-container.active {
+        display: none;
+    }
+    
+    .history-btn {
         top: auto;
         margin-top: 25px;
         /* bottom: 25px; */
         font-size: 18px;
     }
-    .history img {
+    .history-btn img {
         width: 30px;
     }
 }
