--- a/client/src/components/TranslateHistory/styles.module.css
+++ b/client/src/components/TranslateHistory/styles.module.css
@@ -1,50 +1,45 @@
-.list {
-    margin: auto;
-    margin-right: 0;
-    height: 70%;
-    padding: 0;
-    width: 100%;
-    padding: 10px 25px;
-    box-sizing: border-box;
-    overflow-y: auto;
-    scrollbar-color: var(--accent) var(--background);
-    scrollbar-width: thin;
+.history-header {
+    height: 55px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
 }
 
+.history-header span {
+    padding-right: 25px;
+    font-size: 35px;
+}
 
-.list div {
-    user-select: none;
+.history-header img {
     cursor: pointer;
-    margin: auto;
-    border-bottom: 1px solid var(--placeholder);
-    margin-bottom: 10px;
+    margin-left: 25px;
+    width: 35px;
 }
 
-.list div:last-child {
-    border: 0px;
+.history-header img:hover {
+    opacity: 0.8;
 }
 
-.list div:hover {
-    opacity: 0.5;
+.history-menu {
+    padding: 20px 15px;
+    height: 15%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.list div span {
-    padding: 0 5px;
+.menu-btn {
+    margin: 5px 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.original {
-    color: var(--text);
-    font-size: 30px;
+.menu-btn:hover {
+    opacity: 0.6;
 }
 
-.translated {
-    text-overflow: ellipsis;
-    font-size: 20px;
-    color: var(--placeholder)
-}
-
-.empty {
-    font-size: 30px;
-    color: var(--placeholder);
-
+.menu-btn img {
+    width: 37px;
 }
