--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,8 +3,10 @@
   --text: #E7E9EE;
   --bright-bg: #24232A;
   --placeholder: #616161;
-  --accent: #EE3636;
+  --accent: #2A59BB;
+
 }
+
 
 body {
   overflow-x: hidden;
@@ -12,7 +14,9 @@ body {
   margin: 0;
   color: var(--text);
   background-color: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont,'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
