--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,9 @@
 :root {
-  --background: #171719;
+  --background: #101011;
   --text: #E7E9EE;
-  --bright-bg: #24232A;
-  --placeholder: #616161;
-  --accent: #2A59BB;
-
+  --bright-bg: #18181a;
+  --placeholder: #4b4a4a;
+  --accent: #EE3636;
 }
 
 
@@ -14,7 +13,7 @@ body {
   margin: 0;
   color: var(--text);
   background-color: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont,'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
