Fix some bugs & Remove testing functionality.

--- a/client/src/components/Share/styles.module.sass
+++ b/client/src/components/Share/styles.module.sass
@@ -58,6 +58,7 @@
     border-radius: 20px
     max-width: 65%
     height: auto
+    max-height: 80%
 
 @media only screen and (max-width: 900px)
     .container
@@ -67,9 +68,9 @@
     .option
         width: 90%
 
-    &:hover
-        background-color: transparent
-        opacity: 0.5
+        // &:hover
+        //     background-color: transparent
+        //     opacity: 0.5
 
     .raw.option
         & svg
@@ -83,4 +84,4 @@
 
     .qr-image
         border-radius: 10px
-        max-width: 100%
+        width: 100%
