--- a/client/src/components/Modal/styles.module.sass
+++ b/client/src/components/Modal/styles.module.sass
@@ -1,3 +1,4 @@
+
 .backdrop
     position: fixed
     flex-direction: column
@@ -11,7 +12,16 @@
     right: 0
     width: 100%
     height: 100%
-    background-color: rgba(0, 0, 0, 0.5)
+    background-color: rgba(0, 0, 0, 0.7)
+    transition: opacity 0.5s
+
+    &.opened
+        opacity: 1
+        pointer-events: all
+
+    &.closed
+        opacity: 0
+        pointer-events: none
 
 @keyframes fadeIn
     0%
