--- a/client/src/components/Translate/styles.module.sass
+++ b/client/src/components/Translate/styles.module.sass
@@ -31,7 +31,7 @@
         opacity: 1
 
 .menu
-    width: 100%
+    margin: 0 auto
     display: flex
     justify-content: center
     align-items: center
