--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -1,9 +1,10 @@
 \:root
-  --background: #101011
-  --text: #E7E9EE
-  --bright-bg: #18181a
   --placeholder: #4b4a4a
-  --accent: #EE3636
+  --accent: white
+  --background: #090E11
+  --text: #D8D9DA
+  --dark-text: #343B41
+  --bright-bg: #0c1114
 
 body
   overflow-x: hidden
@@ -11,11 +12,11 @@ body
   margin: 0
   color: var(--text)
   background-color: var(--background)
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Oxygen','Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
 
 *
+  font-family: 'Ubuntu',  sans-serif
   box-sizing: border-box
 
 img
