--- a/client/src/components/Header/styles.module.sass
+++ b/client/src/components/Header/styles.module.sass
@@ -1,6 +1,6 @@
 header
     display: flex
-    justify-content: space-between
+    justify-content: center
     align-items: center
     width: 95%
     height: 8%
@@ -14,32 +14,11 @@ header
     font-size: 35px
 
     & img
-        width: 45px
-        height: 45px
         margin-right: 10px
 
-.chat
-    width: 45px
-    height: 45px
-    background-color: var(--bright-bg)
-    border: none
-    padding: 10px
-    border-radius: 12px
-
-    & img
-        cursor: pointer
-        width: 25px
-
-    &:hover
-        opacity: 0.8
 
 @media only screen and (max-width: 900px)
     .logo
-        padding: 5px 15px
-        border-radius: 15px
-        background-color: var(--bright-bg)
-        font-size: 25px
 
-    & img
-        width: 30px
-        height: 30px
+        & img
+            width: 180px
