Fix toolbar for chrome. Added chat sign in.

--- a/client/src/components/header/styles.module.sass
+++ b/client/src/components/header/styles.module.sass
@@ -1,4 +1,12 @@
 .header
     display: flex
     justify-content: center
-    padding: 15px 0px
+    align-items: center
+    margin-right: 0
+    padding: 15px 20px
+
+    img
+        min-width: 30px
+
+    .links a
+        margin-left: 20px
