Place footer only on homepage

--- a/client/src/components/header/styles.module.sass
+++ b/client/src/components/header/styles.module.sass
@@ -4,6 +4,7 @@
     align-items: center
     margin-right: 0
     padding: 15px 20px
+    box-sizing: border-box
 
     img
         min-width: 30px
