--- a/client/src/index.sass
+++ b/client/src/index.sass
@@ -1,5 +1,4 @@
 \:root
-  --accent: white
   --background: #090E11
   --text: #D8D9DA
   --dark-text: #343B41
@@ -15,13 +14,12 @@ body
 
 
 #root, body, html, .App
-  overflow-y: hidden
+  overflow: hidden
   height: 100%
 
 *
   font-family: 'Ubuntu',  sans-serif
   box-sizing: border-box
-
 
 img
   user-select: none
