Add userlist to chat page

--- a/client/src/pages/chat.module.sass
+++ b/client/src/pages/chat.module.sass
@@ -1,8 +1,6 @@
-.signInContainer
+.container
     height: 100%
+    width: 100%
     display: flex
+    flex-direction: column
     align-items: center
-
-    @media only screen and (max-width: 900px)
-        margin-top: 30px
-        align-items: flex-start
